--- a/panda/pandaintro.ipynb
+++ b/panda/pandaintro.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "da7990f3-fbfe-4868-b74b-8c02ef55cd5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "42f4bae6-47b9-4f6d-8d6d-38348a7604c6",
    "metadata": {},
    "outputs": [],
@@ -30,134 +32,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "4716bf11-068f-4d17-8f98-3776a8b2898b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Series\n",
-    "s = pd.Series([1,2,3,4,5,6])\n",
-    "# s\n",
-    "# print(s,type(s))\n",
+    "# #Series\n",
+    "# s = pd.Series([1,2,3,4,5,6])\n",
+    "# # s\n",
+    "# # print(s,type(s))\n",
     "\n",
-    "# index\n",
-    "print(s[2])\n"
+    "# # index\n",
+    "# print(s[2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "04cea5e8-f5f5-484f-a3ec-64ec074d877b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adam       23\n",
-      "eve        28\n",
-      "bod        32\n",
-      "charlie    45\n",
-      "dtype: int64\n",
-      "28\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = pd.Series([23,28,32,45],index=[\"adam\",\"eve\",\"bod\",\"charlie\"])\n",
-    "print(s)\n",
+    "# s = pd.Series([23,28,32,45],index=[\"adam\",\"eve\",\"bod\",\"charlie\"])\n",
+    "# print(s)\n",
     "\n",
-    "print(s[\"eve\"])\n",
-    "# print(s[1])\n",
-    "# FutureWarning: Series.__getitem__ treating keys as positions is deprecated.\n",
-    "# In a future version, integer keys will always be treated as labels"
+    "# print(s[\"eve\"])\n",
+    "# # print(s[1])\n",
+    "# # FutureWarning: Series.__getitem__ treating keys as positions is deprecated.\n",
+    "# # In a future version, integer keys will always be treated as labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5ef76f25-8290-40e1-8f16-1a1214835229",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = pd.Series([])"
+    "# s1 = pd.Series([])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "c72a495e-ac27-463b-91f8-ee111d0c5567",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   ID     Name  Age Department  Salary\n",
-      "0   1    Alice   25         HR   55000\n",
-      "1   2      Bob   32         IT   72000\n",
-      "2   3  Charlie   28    Finance   48000\n",
-      "3   4    David   45  Marketing   91000\n",
-      "4   5      Eva   38         IT   65000\n",
-      "5   6    Frank   29    Finance   50000\n",
-      "6   7    Grace   41         HR   82000\n",
-      "7   8   Hannah   26  Marketing   47000\n",
-      "8   9      Ian   35         IT   75000\n",
-      "9  10    Julia   30    Finance   60000 <class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#CSV Data\n",
-    "df1 = pd.read_csv(\"employee_data.csv\")\n",
+    "# #CSV Data\n",
+    "# df1 = pd.read_csv(\"employee_data.csv\")\n",
     "\n",
-    "print(df1,type(df1))\n",
+    "# print(df1,type(df1))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "a8acd7e8-5d42-4b70-b2ec-8af4c57ddfd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Json\n",
+    "\n",
+    "# df2 = pd.read_json(\"employedata.json\")\n",
+    "# print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "849e8bc2-254d-4bcd-b164-09fca580e6f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df2.head() #Starting 5 rows\n",
+    "# df2.tail() #last 5 rows df2.tail(2) last two or any n rows\n",
+    "# df2.sample() #random row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0ef8e020-a535-4c30-8884-084145b2af57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42a8b6e2-e3db-4686-b096-1e0d18393b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # df2.shape\n",
+    "\n",
+    "# df2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "605c38e6-ea52-472e-89f8-4c1a2305e14f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Filtering of data\n",
+    "\n",
+    "# # df2[ (df2[\"Salary\"] >= 82000) & (df2[\"Age\"]>42) ]\n",
+    "# df2[ (df2[\"Salary\"] >= 82000) | (df2[\"Age\"]>30) ][[\"Name\",\"ID\"]] # Chaining with only required fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fdc4b5bf-ade3-4f5e-9fe0-be6a170d74f4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   ID     Name  Age Department  Salary\n",
-      "0   1    Alice   25         HR   55000\n",
-      "1   2      Bob   32         IT   72000\n",
-      "2   3  Charlie   28    Finance   48000\n",
-      "3   4    David   45  Marketing   91000\n",
-      "4   5      Eva   38         IT   65000\n",
-      "5   6    Frank   29    Finance   50000\n",
-      "6   7    Grace   41         HR   82000\n",
-      "7   8   Hannah   26  Marketing   47000\n",
-      "8   9      Ian   35         IT   75000\n",
-      "9  10    Julia   30    Finance   60000\n"
+      "   Col1  Col2  Col3\n",
+      "0     1     2     3\n",
+      "1     4     5     6\n",
+      "2     7     8     9\n"
      ]
     }
    ],
    "source": [
-    "#Json\n",
-    "\n",
-    "df2 = pd.read_json(\"employedata.json\")\n",
-    "print(df2)"
+    "# Creating DataFrom using Numpy array \n",
+    "np_arr = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]]) \n",
+    "df = pd.DataFrame(np_arr, columns=[\"Col1\", \"Col2\", \"Col3\"]) \n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "849e8bc2-254d-4bcd-b164-09fca580e6f7",
+   "execution_count": 22,
+   "id": "9ee0f207-ec0b-460d-89aa-d61be3dfdde2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Name  Marks\n",
+      "0     Adam     96\n",
+      "1      Eve     75\n",
+      "2      Bob     82\n",
+      "3  Charlie     92\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating DataFrom using Lists \n",
+    "l = [[\"Adam\", 96], [\"Eve\", 75], [\"Bob\", 82], [\"Charlie\", 92]] \n",
+    "df = pd.DataFrame(l, columns=[\"Name\", \"Marks\"]) \n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d50f6271-e77a-436a-a3a2-bf18beb724a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data={'Name':['Aarav','Isha','Rohan','Sneha','Vikram'],\n",
+    "      'Age':[25, 30, 35, 40, 45], \n",
+    "      'City': ['Delhi', 'Mumbai', 'Bangalore', 'Kolkata', 'Chennai'] }\n",
+    "df = pd.DataFrame(data)\n",
+    "# df.loc[0,\"City\"]\n",
+    "# df.loc[0]\n",
+    "# df.loc[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "405b06d9-d264-4fb5-8639-e5db38cca71f",
    "metadata": {},
    "outputs": [
     {
@@ -181,29 +238,142 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
        "      <th>Name</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>Salary</th>\n",
+       "      <th>City</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarav</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Isha</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Mumbai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>48000</td>\n",
+       "      <td>Rohan</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Bangalore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sneha</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vikram</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Chennai</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID     Name  Age Department  Salary\n",
-       "2   3  Charlie   28    Finance   48000"
+       "     Name  Age       City\n",
+       "0   Aarav   25      Delhi\n",
+       "1    Isha   30     Mumbai\n",
+       "2   Rohan   35  Bangalore\n",
+       "3   Sneha   40    Kolkata\n",
+       "4  Vikram   45    Chennai"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df.loc[0] # 1st row (by label) \n",
+    "# df.loc[0:3] # row0 to row3 -both inclusive in loc \n",
+    "# df.loc[0, \"country\"] # 0th row & specific colum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "33e86785-dd20-4c2e-b867-bfb3831d715d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarav</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Isha</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Mumbai</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age    City\n",
+       "0  Aarav   25   Delhi\n",
+       "1   Isha   30  Mumbai"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0]\n",
+    "df.iloc[0:2] #last index is not included \n",
+    "#In iloc , when we slice, the ending index is NOT inclusive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6a237e3a-e6dd-4f9a-b7bb-7895a41cda66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Delhi'"
       ]
      },
      "execution_count": 42,
@@ -212,44 +382,14 @@
     }
    ],
    "source": [
-    "df2.head() #Starting 5 rows\n",
-    "df2.tail() #last 5 rows df2.tail(2) last two or any n rows\n",
-    "df2.sample() #random row"
+    "df.at[0,\"City\"]\n",
+    "df.iat[0,2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "0ef8e020-a535-4c30-8884-084145b2af57",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10 entries, 0 to 9\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   ID          10 non-null     int64 \n",
-      " 1   Name        10 non-null     object\n",
-      " 2   Age         10 non-null     int64 \n",
-      " 3   Department  10 non-null     object\n",
-      " 4   Salary      10 non-null     int64 \n",
-      "dtypes: int64(3), object(2)\n",
-      "memory usage: 532.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "42a8b6e2-e3db-4686-b096-1e0d18393b18",
+   "execution_count": 46,
+   "id": "89ed5502-b396-402b-8bbb-a82a718bd410",
    "metadata": {},
    "outputs": [
     {
@@ -273,91 +413,110 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Salary</th>\n",
+       "      <th>City</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>10.00000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>5.50000</td>\n",
-       "      <td>32.900000</td>\n",
-       "      <td>64500.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>3.02765</td>\n",
-       "      <td>6.674162</td>\n",
-       "      <td>15182.226451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>47000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>3.25000</td>\n",
-       "      <td>28.250000</td>\n",
-       "      <td>51250.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>5.50000</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>62500.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7.75000</td>\n",
-       "      <td>37.250000</td>\n",
-       "      <td>74250.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>10.00000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>91000.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarav</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Delhi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             ID        Age        Salary\n",
-       "count  10.00000  10.000000     10.000000\n",
-       "mean    5.50000  32.900000  64500.000000\n",
-       "std     3.02765   6.674162  15182.226451\n",
-       "min     1.00000  25.000000  47000.000000\n",
-       "25%     3.25000  28.250000  51250.000000\n",
-       "50%     5.50000  31.000000  62500.000000\n",
-       "75%     7.75000  37.250000  74250.000000\n",
-       "max    10.00000  45.000000  91000.000000"
+       "    Name  Age   City\n",
+       "0  Aarav   25  Delhi"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df2.shape\n",
-    "\n",
-    "df2.describe()"
+    "df[df['Age']>30]\n",
+    "df[(df['Age']<30)&(df['City']=='Delhi')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cd3d91c5-0445-4a97-b9a6-d83db270bcb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarav</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age   City\n",
+       "0  Aarav   25  Delhi"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query(\"Age >=25 and City=='Delhi' \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "585cf963-3556-4a1f-a51f-9828dd385d44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query StringRules:\n",
+    "# 1.We write the condition in a string.\n",
+    "# 2.We can use operators like and , or ,not , == , != , > , < , <=etc."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605c38e6-ea52-472e-89f8-4c1a2305e14f",
+   "id": "75d0bd42-f955-49f6-a135-04e4e002cfc5",
    "metadata": {},
    "outputs": [],
    "source": []
