Scraping the data from static html

--- a/Assignmnet_panda/petal.ipynb
+++ b/Assignmnet_panda/petal.ipynb
@@ -24,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "66db0279-59f0-4d88-abf0-ffd118b9365c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
